prevent logos overflowing on narrower screens

--- a/src/layout/footer/style.module.css
+++ b/src/layout/footer/style.module.css
@@ -1,4 +1,9 @@
 .footer {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.footer img {
+  max-width: 100vw;
 }
